--- a/global_config/views/cleaning_view.yaml
+++ b/global_config/views/cleaning_view.yaml
@@ -8,25 +8,24 @@
 # set up by myself. It tries to show as much of the interface as possible without the need for you to edit the views. You will ofcourse
 # want to set it up yourself. Using it this way makes it possible to only change what you want to change. E.g. You only want to change
 # the icons on the buttons of the frontpage? Well you will only need to uncomment the item in the list below and put in your own config!
-# DO NOT EVER COMMENT THE CURRENTLY UNCOMMENTED LINES, DO NOT REMOVE THEM EITHER!
 
 # Before you continue I will recommend you to use VSCode as a text editor https://code.visualstudio.com/
 
 # Header
 cleaning_header:
-#  title: Cleaning
-#  icon: fal:calendar-edit
-#  subtitle: Checklist
+  title: Cleaning
+  icon: fal:calendar-edit
+  subtitle: Checklist
 
 # Config
 cleaning:
-#  first_item: Stofzuigen
-#  second_item: Dweilen
-#  third_item: Stoffen
-#  fourth_item: Spiegels
-#  fifth_item: Ramen
-#  sixth_item: Gordijnen
-#  seventh_item: Toilet
-#  eighth_item: Badkamer
-#  ninth_item: Bed
-#  tenth_item: Matras
+  first_item: Stofzuigen
+  second_item: Dweilen
+  third_item: Stoffen
+  fourth_item: Spiegels
+  fifth_item: Ramen
+  sixth_item: Gordijnen
+  seventh_item: Toilet
+  eighth_item: Badkamer
+  ninth_item: Bed
+  tenth_item: Matras
