--- a/global_config/views/location_view.yaml
+++ b/global_config/views/location_view.yaml
@@ -8,15 +8,14 @@
 # set up by myself. It tries to show as much of the interface as possible without the need for you to edit the views. You will ofcourse
 # want to set it up yourself. Using it this way makes it possible to only change what you want to change. E.g. You only want to change
 # the icons on the buttons of the frontpage? Well you will only need to uncomment the item in the list below and put in your own config!
-# DO NOT EVER COMMENT THE CURRENTLY UNCOMMENTED LINES, DO NOT REMOVE THEM EITHER!
 
 # Before you continue I will recommend you to use VSCode as a text editor https://code.visualstudio.com/
 
 # Header
 location_header:
-#  title: Location
-#  icon: fal:location-circle
-#  subtitle: Where is everyone?
+  title: Location
+  icon: fal:location-circle
+  subtitle: Where is everyone?
 
 # Config
 # Nothing to configure as the entities that are needed for this view are taken from global_settings.yaml
