--- a/global_config/views/remote_view.yaml
+++ b/global_config/views/remote_view.yaml
@@ -8,14 +8,29 @@
 # set up by myself. It tries to show as much of the interface as possible without the need for you to edit the views. You will ofcourse
 # want to set it up yourself. Using it this way makes it possible to only change what you want to change. E.g. You only want to change
 # the icons on the buttons of the frontpage? Well you will only need to uncomment the item in the list below and put in your own config!
-# DO NOT EVER COMMENT THE CURRENTLY UNCOMMENTED LINES, DO NOT REMOVE THEM EITHER!
 
 # Before you continue I will recommend you to use VSCode as a text editor https://code.visualstudio.com/
 
 # Header
 remote_header:
-#  title: Remote
-#  icon: mdi:remote
+  title: Remote
+  icon: mdi:remote
 
-# Config
-## No config yet, this will be released soon!
+# Remote Control View (the current template only works with a remote.entity. This was specifically created for the Apple TV. I will publish other templates in the future)
+remote:
+  # Living Room
+  ## First Row (On/Off Switches)
+  - switch.samsung_tv # Livingroom TV entity (switches are preferred as they work better with button-card! See my template switches for examples on how to do this!)
+  - switch.receiver # Livingroom Audio Receiver entity (switches are preferred once again)
+  ## Media Player and Remote
+  - media_player.samsung_tv_ue65ku6000 # Livingroom Media Player Entity that controls the volume (this can be a receiver entity as well, as long as it is within the media_player domain)
+  - media_player.woonkamer_apple_tv # Livingroom Media Player Entity to show in the mini-media-player card (in my case it is an Apple TV)
+  - remote.woonkamer_apple_tv # Livingroom Remote Entity for controlling the actual remote (this can be a TV for example or in my case an Apple TV)
+  # Bedroom
+  ## First Row (On/Off Switches)
+  - switch.tv_slaapkamer # Bedroom TV entity (switches are preferred as they work better with button-card! See my template switches for examples on how to do this!)
+  - switch.receiver_slaapkamer # Bedroom Audio Receiver entity (switches are preferred once again)
+  ## Media PLayer and Remote
+  - media_player.samsung_tv_ue46es5500 # Bedroom Media Player Entity that controls the volume (this can be a receiver entity as well, as long as it is within the media_player domain)
+  - media_player.slaapkamer_apple_tv # Bedroom Media Player Entity to show in the mini-media-player card (in my case it is an Apple TV)
+  - remote.slaapkamer_apple_tv # Bedroom Remote Entity for controlling the actual remote (this can be a TV for example or in my case an Apple TV)
