--- a/lovelace/views/scenes.yaml
+++ b/lovelace/views/scenes.yaml
@@ -11,5 +11,93 @@
           - name: "[[[ if (states['sensor.current_scenes_on'].state == 0) return `No scenes are active`; if (states['sensor.current_scenes_on'].state == 1) return `1 scene is active`; else return `${states['sensor.current_scenes_on'].state} scenes are active` ]]]"
             icon: {{ _global.scenes_header.icon|default('mdi:arrange-send-backward') }}
             content: {{ _global.scenes_header.title|default('Scenes') }}
-
+        - type: custom:layout-card
+          cards:
+            - type: custom:layout-card
+              min_columns: 3
+              max_columns: 3
+              justify_content: start
+              layout: horizontal
+              cards:
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_dagverlichting
+                    name: Dag
+                    label: Verlichting
+                    icon: fal:house-day
+                    service_entity: scene.dagverlichting
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_avondverlichting
+                    name: Avond
+                    label: Verlichting
+                    icon: fal:house-night
+                    service_entity: scene.avondverlichting
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_nachtverlichting
+                    name: Nacht
+                    label: Verlichting
+                    icon: fal:moon-stars
+                    service_entity: scene.nachtverlichting
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.dummy1
+                    name: Film Kijken
+                    icon: fal:film
+                    service_entity: scene.living_movie
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: group.scene_schoonmaken_on
+                    name: Alle lampen
+                    label: Inschakelen
+                    icon: fal:lightbulb-on
+                    service_entity: scene.schoonmaken
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_lichtuit
+                    name: Alle Lampen
+                    label: Uitschakelen
+                    icon: fal:lightbulb-slash
+                    service_entity: scene.lichtuit
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: group.scene_koken_on
+                    name: Koken
+                    icon: fal:hat-chef
+                    service_entity: scene.koken
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: group.scene_wassen_on
+                    name: Wassen
+                    icon: fal:washer
+                    service_entity: scene.wassen
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: group.scene_naarbed
+                    name: Naar Bed
+                    icon: fal:bed-alt
+                    service_entity: scene.naarbed
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_klaar_met_koken
+                    name: Klaar met
+                    label: Koken
+                    icon: fal:power-off
+                    service_entity: scene.klaar_met_koken
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_klaar_met_wassen
+                    name: Klaar met
+                    label: Wassen
+                    icon: fal:power-off
+                    service_entity: scene.klaar_met_wassen
+                - !include
+                  - '../templates/button_service_call.yaml'
+                  - entity: input_boolean.scene_welterusten
+                    name: Welterusten
+                    label: Alles Uit
+                    icon: fal:snooze
+                    service_entity: scene.welterusten
+        - !include ../includes/bottom-card.yaml  
 
