--- a/lovelace/views/computers.yaml
+++ b/lovelace/views/computers.yaml
@@ -11,3 +11,8 @@
           - name: "[[[ if (states['sensor.current_computers_on'].state == 1) return `1 computer is turned on`; else return `${states['sensor.current_computers_on'].state} computers are turned on`  ]]]"
             icon: {{ _global.computers_header.icon|default('mdi:desktop-tower-monitor') }}
             content: {{ _global.computers_header.title|default('Computers') }}
+        - !include
+          - '../templates/auto_fill_devices_template.yaml'
+          - content: Personal Computers
+            group_devices: group.all_computers
+        - !include ../includes/bottom-card.yaml  
