--- a/lovelace/views/about.yaml
+++ b/lovelace/views/about.yaml
@@ -5,7 +5,7 @@
       cards:
         - !include
           - '../templates/system_header.yaml'
-          - name: Homekit Infused v.1.0 RC
+          - name: Homekit Infused v.1.1
             icon: mdi:information-outline
             spin: true
             content: About
