--- a/lovelace/views/computers.yaml
+++ b/lovelace/views/computers.yaml
@@ -8,6 +8,6 @@
       cards:
         - !include
           - '../templates/system_header.yaml'
-          - name: "[[[ if (states['sensor.current_computers_on'].state == 1) return `1 computer is turned on`; else return `${states['sensor.current_computers_on'].state} computers are turned on`  ]]]"
+          - name: "[[[ return `${states['sensor.current_computers_on'].state} Computers are turned on`  ]]]"
             icon: {{ _global.computers_header.icon|default('mdi:desktop-tower-monitor') }}
             content: {{ _global.computers_header.title|default('Computers') }}
