--- a/lovelace/views/laundry.yaml
+++ b/lovelace/views/laundry.yaml
@@ -8,7 +8,7 @@
       cards:
         - !include
           - '../templates/system_header.yaml'
-          - name: "[[[ if (states['sensor.current_laundry_devices_on'].state == 0) return `All devices are off`; if (states['sensor.current_laundry_devices_on'].state == 1) return `1 device is turned on`; else return `${states['sensor.current_laundry_devices_on'].state} devices are turned on` ]]]"
+          - name: "[[[ return `${states['sensor.current_laundry_devices_on'].state} Devices are turned on` ]]]"
             icon: {{ _global.laundry_header.icon|default('mdi:washing-machine') }}
             content: {{ _global.laundry_header.title|default('Laundry') }}
         - type: custom:layout-card
